appId: dev.noboil.mobile.stdb.blog
---
- launchApp
- assertVisible:
    id: "crud-dynamic-page"
- tapOn:
    id: "profile-link"
- assertVisible:
    id: "profile-page"
- tapOn:
    id: "profile-displayName"
- inputText: "User 40"
- tapOn:
    id: "profile-submit"
- assertVisible:
    id: "profile-page"
