appId: dev.noboil.mobile.convex.movie
---
- launchApp
- assertVisible:
    id: "movie-search-page"
- tapOn:
    id: "movie-fetch-link"
- assertVisible:
    id: "movie-fetch-page"
- tapOn:
    id: "movie-search-input"
- eraseText: 50
- inputText: "Inception"
- tapOn:
    id: "movie-search-submit"
- extendedWaitUntil:
    visible:
      id: "movie-results"
    timeout: 15000
- assertVisible:
    id: "movie-results"
- tapOn:
    id: "movie-back-button"
- assertVisible:
    id: "movie-search-page"
