appId: dev.noboil.mobile.stdb.movie
---
- launchApp
- assertVisible:
    id: "movie-search-page"
- tapOn:
    id: "movie-fetch-link"
- assertVisible:
    id: "movie-fetch-page"
- assertVisible:
    id: "movie-id-input"
