appId: dev.noboil.mobile.stdb.chat
---
- launchApp
- assertVisible:
    id: "chat-home-page"
- tapOn:
    id: "chat-input"
- inputText: "Chat message 19"
- tapOn:
    id: "send-button"
- extendedWaitUntil:
    visible:
      id: "chat-page"
    timeout: 15000
- assertVisible:
    id: "chat-page"
- tapOn:
    id: "chat-message-input"
- inputText: "Follow up 19"
- tapOn:
    id: "chat-message-send"
