appId: dev.noboil.mobile.stdb.chat
---
- launchApp
- assertVisible:
    id: "chat-home-page"
- tapOn:
    id: "chat-input"
- inputText: "Chat message 25"
- tapOn:
    id: "send-button"
- extendedWaitUntil:
    visible:
      id: "chat-page"
    timeout: 15000
- assertVisible:
    id: "chat-page"
- back
- tapOn:
    id: "public-list-link"
- assertVisible:
    id: "public-chats-page"
- tapOn:
    id: "public-chat-item"
- assertVisible:
    id: "chat-page"
