appId: dev.noboil.mobile.convex.movie
---
- launchApp
- assertVisible:
    id: "movie-search-page"
- tapOn:
    id: "movie-fetch-link"
- assertVisible:
    id: "movie-fetch-page"
- tapOn:
    id: "movie-id-input"
- eraseText: 20
- inputText: "0"
- tapOn:
    id: "movie-fetch-submit"
- extendedWaitUntil:
    visible:
      id: "movie-error"
    timeout: 15000
- assertVisible:
    id: "movie-error"
