appId: dev.noboil.mobile.stdb.movie
---
- launchApp
- assertVisible:
    id: "movie-search-page"
- tapOn:
    id: "movie-fetch-link"
- assertVisible:
    id: "movie-fetch-page"
- tapOn:
    id: "movie-id-input"
- eraseText: 20
- inputText: "155"
- tapOn:
    id: "movie-fetch-submit"
- extendedWaitUntil:
    visible:
      id: "movie-detail"
    timeout: 15000
- assertVisible:
    id: "movie-detail"
- assertVisible:
    id: "cache-status"
- tapOn:
    id: "movie-id-input"
- eraseText: 20
- inputText: "155"
- tapOn:
    id: "movie-fetch-submit"
- assertVisible:
    id: "cache-status"
