appId: dev.noboil.mobile.stdb.movie
---
- launchApp
- assertVisible:
    id: "movie-search-page"
- tapOn:
    id: "movie-fetch-link"
- assertVisible:
    id: "movie-fetch-page"
- tapOn:
    id: "movie-id-input"
- eraseText: 20
- inputText: "27205"
- tapOn:
    id: "movie-fetch-submit"
- assertVisible:
    id: "movie-loading"
